# FastAPI

./: pyproject.toml
Project 2/: book2Luis.py
